<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animationCache="false"
    android:background="#FFE4E9"
    android:onClick="registerOrLogin"
    tools:context=".LoginActivity"
    android:id="@+id/login_layout">

    <Button
        android:id="@+id/entry_button"
        android:layout_width="165dp"
        android:layout_height="44dp"
        android:fontFamily="@font/a"
        android:onClick="openMain"
        android:text="@string/login_reg_button"
        android:textColor="#0D47A1"
        android:textStyle="bold|italic"
        app:backgroundTint="#E3A5ED"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.908" />

    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="390dp"
        android:layout_height="48dp"
        android:fontFamily="@font/a"
        android:text="@string/welcome_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#E60C0C"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="247dp"
        android:layout_height="71dp"
        android:cursorVisible="true"
        android:ems="10"
        android:fontFamily="@font/a"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="250dp"
        android:layout_height="81dp"
        android:cursorVisible="true"
        android:textColor="#0D47A1"

        android:ems="10"
        android:fontFamily="@font/a"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.347" />

</androidx.constraintlayout.widget.ConstraintLayout>