<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button3"
        android:layout_width="166dp"
        android:layout_height="60dp"
        android:fontFamily="@font/a"
        android:onClick="onClickNewVideo"
        android:text="Video Instruction"
        android:textColor="#0D47A1"
        app:backgroundTint="#F6AAC4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <Button
        android:id="@+id/button2"
        android:layout_width="168dp"
        android:layout_height="66dp"
        android:onClick="onClickNewRecord"
        android:fontFamily="@font/a"
        android:text="@string/search_records_button"
        app:backgroundTint="#F6AAC4"
        android:textColor="#0D47A1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.327" />

    <Button
        android:id="@+id/new_search_button"
        android:layout_width="169dp"
        android:layout_height="57dp"
        android:fontFamily="@font/a"
        android:onClick="onClickNewSearch"
        android:text="@string/new_search_button"
        android:textColor="#0D47A1"
        app:backgroundTint="#F6AAC4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207" />

    <Button
        android:id="@+id/button6"
        android:layout_width="161dp"
        android:layout_height="52dp"
        android:fontFamily="@font/a"
        android:onClick="onClickNewMap"
        android:text="@string/map_button"
        app:backgroundTint="#F6AAC4"
        android:textColor="#0D47A1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453" />

    <Button
        android:id="@+id/change_pswd"
        android:layout_width="170dp"
        android:layout_height="65dp"
        android:fontFamily="@font/a"
        android:onClick="onClickChangePswd"
        android:text="@string/change_pswd_botton"
        app:backgroundTint="#F6AAC4"
        android:textColor="#0D47A1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585" />

    <Button
        android:id="@+id/button"
        android:layout_width="170dp"
        android:layout_height="65dp"
        android:fontFamily="@font/a"
        android:onClick="onClickDeleteAccount"
        android:text="@string/cancel_account_button"
        android:textColor="#000000"

        app:backgroundTint="#FF0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />

</androidx.constraintlayout.widget.ConstraintLayout>